azure-adf-e2e/arm-templates/resource-group/rg.json
{
    "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "storageAccounts_cftproject_name": {
            "defaultValue": "cftproject",
            "type": "String"
        },
        "workspaces_cft_databricks_name": {
            "defaultValue": "cft_databricks",
            "type": "String"
        },
        "virtualNetworks_CFT_Virtual_Network_name": {
            "defaultValue": "CFT_Virtual_Network",
            "type": "String"
        },
        "accessConnectors_adb_access_connector_name": {
            "defaultValue": "adb-access-connector",
            "type": "String"
        },
        "networkSecurityGroups_databricksnsgmuuuizl5pkmwk_name": {
            "defaultValue": "databricksnsgmuuuizl5pkmwk",
            "type": "String"
        },
        "userAssignedIdentities_databricks_uami_autoloader_name": {
            "defaultValue": "databricks-uami-autoloader",
            "type": "Strin"
        }
    },
    "variables": {},
    "resources": [
        {
            "type": "Microsoft.Databricks/accessConnectors",
            "apiVersion": "2025-03-01-preview",
            "name": "[parameters('accessConnectors_adb_access_connector_name')]",
            "location": "centralindiaaa",
            "identity": {
                "type": "SystemAssigned, UserAssigned",
                "userAssignedIdentities": {
                    "/subscriptions/cfd34ebb-456e-4c5c-a8da-3d09bc871fef/resourceGroups/CloudFrame-RG/providers/Microsoft.ManagedIdentity/userAssignedIdentities/databricks-uami-autoloader": {}
                }
            },
            "properties": {}
        },
        {
            "type": "Microsoft.ManagedIdentity/userAssignedIdentities",
            "apiVersion": "2025-01-31-preview",
            "name": "[parameters('userAssignedIdentities_databricks_uami_autoloader_name')]",
            "location": "southindia"
        },
        {
            "type": "Microsoft.Network/networkSecurityGroups",
            "apiVersion": "2024-07-01",
            "name": "[parameters('networkSecurityGroups_databricksnsgmuuuizl5pkmwk_name')]",
            "location": "centralindia",
            "properties": {
                "securityRules": [
                    {
                        "name": "Microsoft.Databricks-workspaces_UseOnly_databricks-worker-to-worker-inbound",
                        "id": "[resourceId('Microsoft.Network/networkSecurityGroups/securityRules', parameters('networkSecurityGroups_databricksnsgmuuuizl5pkmwk_name'), 'Microsoft.Databricks-workspaces_UseOnly_databricks-worker-to-worker-inbound')]",
                        "type": "Microsoft.Network/networkSecurityGroups/securityRules",
                        "properties": {
                            "description": "Required for worker nodes communication within a cluster.",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "VirtualNetwork",
                            "access": "Allow",
                            "priority": 100,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "Microsoft.Databricks-workspaces_UseOnly_databricks-worker-to-worker-outbound",
                        "id": "[resourceId('Microsoft.Network/networkSecurityGroups/securityRules', parameters('networkSecurityGroups_databricksnsgmuuuizl5pkmwk_name'), 'Microsoft.Databricks-workspaces_UseOnly_databricks-worker-to-worker-outbound')]",
                        "type": "Microsoft.Network/networkSecurityGroups/securityRules",
                        "properties": {
                            "description": "Required for worker nodes communication within a cluster.",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "VirtualNetwork",
                            "access": "Allow",
                            "priority": 100,
                            "direction": "Outbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "Microsoft.Databricks-workspaces_UseOnly_databricks-worker-to-databricks-webapp",
                        "id": "[resourceId('Microsoft.Network/networkSecurityGroups/securityRules', parameters('networkSecurityGroups_databricksnsgmuuuizl5pkmwk_name'), 'Microsoft.Databricks-workspaces_UseOnly_databricks-worker-to-databricks-webapp')]",
                        "type": "Microsoft.Network/networkSecurityGroups/securityRules",
                        "properties": {
                            "description": "Required for workers communication with Databricks control plane.",
                            "protocol": "tcp",
                            "sourcePortRange": "*",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "AzureDatabricks",
                            "access": "Allow",
                            "priority": 101,
                            "direction": "Outbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [
                                "443",
                                "3306",
                                "8443-8451"
                            ],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "Microsoft.Databricks-workspaces_UseOnly_databricks-worker-to-sql",
                        "id": "[resourceId('Microsoft.Network/networkSecurityGroups/securityRules', parameters('networkSecurityGroups_databricksnsgmuuuizl5pkmwk_name'), 'Microsoft.Databricks-workspaces_UseOnly_databricks-worker-to-sql')]",
                        "type": "Microsoft.Network/networkSecurityGroups/securityRules",
                        "properties": {
                            "description": "Required for workers communication with Azure SQL services.",
                            "protocol": "tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "3306",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "Sql",
                            "access": "Allow",
                            "priority": 102,
                            "direction": "Outbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "Microsoft.Databricks-workspaces_UseOnly_databricks-worker-to-storage",
                        "id": "[resourceId('Microsoft.Network/networkSecurityGroups/securityRules', parameters('networkSecurityGroups_databricksnsgmuuuizl5pkmwk_name'), 'Microsoft.Databricks-workspaces_UseOnly_databricks-worker-to-storage')]",
                        "type": "Microsoft.Network/networkSecurityGroups/securityRules",
                        "properties": {
                            "description": "Required for workers communication with Azure Storage services.",
                            "protocol": "tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "443",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "Storage",
                            "access": "Allow",
                            "priority": 103,
                            "direction": "Outbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "Microsoft.Databricks-workspaces_UseOnly_databricks-worker-to-eventhub",
                        "id": "[resourceId('Microsoft.Network/networkSecurityGroups/securityRules', parameters('networkSecurityGroups_databricksnsgmuuuizl5pkmwk_name'), 'Microsoft.Databricks-workspaces_UseOnly_databricks-worker-to-eventhub')]",
                        "type": "Microsoft.Network/networkSecurityGroups/securityRules",
                        "properties": {
                            "description": "Required for worker communication with Azure Eventhub services.",
                            "protocol": "tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "9093",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "EventHub",
                            "access": "Allow",
                            "priority": 104,
                            "direction": "Outbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    }
                ]
            }
        },
        {
            "type": "Microsoft.Storage/storageAccounts",
            "apiVersion": "2025-01-01",
            "name": "[parameters('storageAccounts_cftproject_name')]",
            "location": "southindia",
            "sku": {
                "name": "Standard_LRS",
                "tier": "Standard"
            },
            "kind": "StorageV2",
            "properties": {
                "dnsEndpointType": "Standard",
                "defaultToOAuthAuthentication": false,
                "publicNetworkAccess": "Enabled",
                "allowCrossTenantReplication": false,
                "minimumTlsVersion": "TLS1_2",
                "allowBlobPublicAccess": false,
                "allowSharedKeyAccess": true,
                "largeFileSharesState": "Enabled",
                "networkAcls": {
                    "bypass": "AzureServices",
                    "virtualNetworkRules": [],
                    "ipRules": [],
                    "defaultAction": "Allow"
                },
                "supportsHttpsTrafficOnly": true,
                "encryption": {
                    "requireInfrastructureEncryption": false,
                    "services": {
                        "file": {
                            "keyType": "Account",
                            "enabled": true
                        },
                        "blob": {
                            "keyType": "Account",
                            "enabled": true
                        }
                    },
                    "keySource": "Microsoft.Storage"
                },
                "accessTier": "Hot"
            }
        },
        {
            "type": "Microsoft.Databricks/workspaces",
            "apiVersion": "2025-03-01-preview",
            "name": "[parameters('workspaces_cft_databricks_name')]",
            "location": "centralindia",
            "dependsOn": [
                "[resourceId('Microsoft.Network/virtualNetworks', parameters('virtualNetworks_CFT_Virtual_Network_name'))]"
            ],
            "tags": {
                "owner": "cft"
            },
            "sku": {
                "name": "trial"
            },
            "properties": {
                "defaultCatalog": {
                    "initialType": "UnityCatalog"
                },
                "managedResourceGroupId": "[concat('/subscriptions/cfd34ebb-456e-4c5c-a8da-3d09bc871fef/resourceGroups/', parameters('workspaces_cft_databricks_name'))]",
                "parameters": {
                    "customPrivateSubnetName": {
                        "value": "private_subnet"
                    },
                    "customPublicSubnetName": {
                        "value": "public_subnet"
                    },
                    "customVirtualNetworkId": {
                        "value": "[resourceId('Microsoft.Network/virtualNetworks', parameters('virtualNetworks_CFT_Virtual_Network_name'))]"
                    },
                    "enableNoPublicIp": {
                        "value": true
                    },
                    "prepareEncryption": {
                        "value": false
                    },
                    "requireInfrastructureEncryption": {
                        "value": false
                    },
                    "storageAccountName": {
                        "value": "dbstorageaxezqc5rbrc26"
                    },
                    "storageAccountSkuName": {
                        "value": "Standard_GRS"
                    }
                },
                "authorizations": [
                    {
                        "principalId": "9a74af6f-d153-4348-988a-e2672920bee9",
                        "roleDefinitionId": "8e3af657-a8ff-443c-a75c-2fe8c4bcb635"
                    }
                ],
                "createdBy": {},
                "updatedBy": {}
            }
        },
        {
            "type": "Microsoft.Network/networkSecurityGroups/securityRules",
            "apiVersion": "2024-07-01",
            "name": "[concat(parameters('networkSecurityGroups_databricksnsgmuuuizl5pkmwk_name'), '/Microsoft.Databricks-workspaces_UseOnly_databricks-worker-to-databricks-webapp')]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_databricksnsgmuuuizl5pkmwk_name'))]"
            ],
            "properties": {
                "description": "Required for workers communication with Databricks control plane.",
                "protocol": "tcp",
                "sourcePortRange": "*",
                "sourceAddressPrefix": "VirtualNetwork",
                "destinationAddressPrefix": "AzureDatabricks",
                "access": "Allow",
                "priority": 101,
                "direction": "Outbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [
                    "443",
                    "3306",
                    "8443-8451"
                ],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
            }
        },
        {
            "type": "Microsoft.Network/networkSecurityGroups/securityRules",
            "apiVersion": "2024-07-01",
            "name": "[concat(parameters('networkSecurityGroups_databricksnsgmuuuizl5pkmwk_name'), '/Microsoft.Databricks-workspaces_UseOnly_databricks-worker-to-eventhub')]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_databricksnsgmuuuizl5pkmwk_name'))]"
            ],
            "properties": {
                "description": "Required for worker communication with Azure Eventhub services.",
                "protocol": "tcp",
                "sourcePortRange": "*",
                "destinationPortRange": "9093",
                "sourceAddressPrefix": "VirtualNetwork",
                "destinationAddressPrefix": "EventHub",
                "access": "Allow",
                "priority": 104,
                "direction": "Outbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
            }
        },
        {
            "type": "Microsoft.Network/networkSecurityGroups/securityRules",
            "apiVersion": "2024-07-01",
            "name": "[concat(parameters('networkSecurityGroups_databricksnsgmuuuizl5pkmwk_name'), '/Microsoft.Databricks-workspaces_UseOnly_databricks-worker-to-sql')]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_databricksnsgmuuuizl5pkmwk_name'))]"
            ],
            "properties": {
                "description": "Required for workers communication with Azure SQL services.",
                "protocol": "tcp",
                "sourcePortRange": "*",
                "destinationPortRange": "3306",
                "sourceAddressPrefix": "VirtualNetwork",
                "destinationAddressPrefix": "Sql",
                "access": "Allow",
                "priority": 102,
                "direction": "Outbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
            }
        },
        {
            "type": "Microsoft.Network/networkSecurityGroups/securityRules",
            "apiVersion": "2024-07-01",
            "name": "[concat(parameters('networkSecurityGroups_databricksnsgmuuuizl5pkmwk_name'), '/Microsoft.Databricks-workspaces_UseOnly_databricks-worker-to-storage')]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_databricksnsgmuuuizl5pkmwk_name'))]"
            ],
            "properties": {
                "description": "Required for workers communication with Azure Storage services.",
                "protocol": "tcp",
                "sourcePortRange": "*",
                "destinationPortRange": "443",
                "sourceAddressPrefix": "VirtualNetwork",
                "destinationAddressPrefix": "Storage",
                "access": "Allow",
                "priority": 103,
                "direction": "Outbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
            }
        },
        {
            "type": "Microsoft.Network/networkSecurityGroups/securityRules",
            "apiVersion": "2024-07-01",
            "name": "[concat(parameters('networkSecurityGroups_databricksnsgmuuuizl5pkmwk_name'), '/Microsoft.Databricks-workspaces_UseOnly_databricks-worker-to-worker-inbound')]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_databricksnsgmuuuizl5pkmwk_name'))]"
            ],
            "properties": {
                "description": "Required for worker nodes communication within a cluster.",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "VirtualNetwork",
                "destinationAddressPrefix": "VirtualNetwork",
                "access": "Allow",
                "priority": 100,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
            }
        },
        {
            "type": "Microsoft.Network/networkSecurityGroups/securityRules",
            "apiVersion": "2024-07-01",
            "name": "[concat(parameters('networkSecurityGroups_databricksnsgmuuuizl5pkmwk_name'), '/Microsoft.Databricks-workspaces_UseOnly_databricks-worker-to-worker-outbound')]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_databricksnsgmuuuizl5pkmwk_name'))]"
            ],
            "properties": {
                "description": "Required for worker nodes communication within a cluster.",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "VirtualNetwork",
                "destinationAddressPrefix": "VirtualNetwork",
                "access": "Allow",
                "priority": 100,
                "direction": "Outbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
            }
        },
        {
            "type": "Microsoft.Network/virtualNetworks",
            "apiVersion": "2024-07-01",
            "name": "[parameters('virtualNetworks_CFT_Virtual_Network_name')]",
            "location": "centralindia",
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_databricksnsgmuuuizl5pkmwk_name'))]"
            ],
            "tags": {
                "owner": "cft"
            },
            "properties": {
                "addressSpace": {
                    "addressPrefixes": [
                        "10.0.1.0/24"
                    ]
                },
                "encryption": {
                    "enabled": false,
                    "enforcement": "AllowUnencrypted"
                },
                "privateEndpointVNetPolicies": "Disabled",
                "subnets": [
                    {
                        "name": "private_subnet",
                        "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworks_CFT_Virtual_Network_name'), 'private_subnet')]",
                        "properties": {
                            "addressPrefix": "10.0.1.128/25",
                            "networkSecurityGroup": {
                                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_databricksnsgmuuuizl5pkmwk_name'))]"
                            },
                            "delegations": [
                                {
                                    "name": "databricks-del-gocb4sz3wnjme",
                                    "id": "[concat(resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworks_CFT_Virtual_Network_name'), 'private_subnet'), '/delegations/databricks-del-gocb4sz3wnjme')]",
                                    "properties": {
                                        "serviceName": "Microsoft.Databricks/workspaces"
                                    },
                                    "type": "Microsoft.Network/virtualNetworks/subnets/delegations"
                                }
                            ],
                            "privateEndpointNetworkPolicies": "Disabled",
                            "privateLinkServiceNetworkPolicies": "Enabled"
                        },
                        "type": "Microsoft.Network/virtualNetworks/subnets"
                    },
                    {
                        "name": "public_subnet",
                        "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworks_CFT_Virtual_Network_name'), 'public_subnet')]",
                        "properties": {
                            "addressPrefix": "10.0.1.0/25",
                            "networkSecurityGroup": {
                                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_databricksnsgmuuuizl5pkmwk_name'))]"
                            },
                            "delegations": [
                                {
                                    "name": "databricks-del-gocb4sz3wnjme",
                                    "id": "[concat(resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworks_CFT_Virtual_Network_name'), 'public_subnet'), '/delegations/databricks-del-gocb4sz3wnjme')]",
                                    "properties": {
                                        "serviceName": "Microsoft.Databricks/workspaces"
                                    },
                                    "type": "Microsoft.Network/virtualNetworks/subnets/delegations"
                                }
                            ],
                            "privateEndpointNetworkPolicies": "Disabled",
                            "privateLinkServiceNetworkPolicies": "Enabled"
                        },
                        "type": "Microsoft.Network/virtualNetworks/subnets"
                    }
                ],
                "virtualNetworkPeerings": [],
                "enableDdosProtection": false
            }
        },
        {
            "type": "Microsoft.Storage/storageAccounts/blobServices",
            "apiVersion": "2025-01-01",
            "name": "[concat(parameters('storageAccounts_cftproject_name'), '/default')]",
            "dependsOn": [
                "[resourceId('Microsoft.Storage/storageAccounts', parameters('storageAccounts_cftproject_name'))]"
            ],
            "sku": {
                "name": "Standard_LRS",
                "tier": "Standard"
            },
            "properties": {
                "containerDeleteRetentionPolicy": {
                    "enabled": true,
                    "days": 7
                },
                "cors": {
                    "corsRules": []
                },
                "deleteRetentionPolicy": {
                    "allowPermanentDelete": false,
                    "enabled": true,
                    "days": 7
                }
            }
        },
        {
            "type": "Microsoft.Storage/storageAccounts/fileServices",
            "apiVersion": "2025-01-01",
            "name": "[concat(parameters('storageAccounts_cftproject_name'), '/default')]",
            "dependsOn": [
                "[resourceId('Microsoft.Storage/storageAccounts', parameters('storageAccounts_cftproject_name'))]"
            ],
            "sku": {
                "name": "Standard_LRS",
                "tier": "Standard"
            },
            "properties": {
                "protocolSettings": {
                    "smb": {}
                },
                "cors": {
                    "corsRules": []
                },
                "shareDeleteRetentionPolicy": {
                    "enabled": true,
                    "days": 7
                }
            }
        },
        {
            "type": "Microsoft.Storage/storageAccounts/queueServices",
            "apiVersion": "2025-01-01",
            "name": "[concat(parameters('storageAccounts_cftproject_name'), '/default')]",
            "dependsOn": [
                "[resourceId('Microsoft.Storage/storageAccounts', parameters('storageAccounts_cftproject_name'))]"
            ],
            "properties": {
                "cors": {
                    "corsRules": []
                }
            }
        },
        {
            "type": "Microsoft.Storage/storageAccounts/tableServices",
            "apiVersion": "2025-01-01",
            "name": "[concat(parameters('storageAccounts_cftproject_name'), '/default')]",
            "dependsOn": [
                "[resourceId('Microsoft.Storage/storageAccounts', parameters('storageAccounts_cftproject_name'))]"
            ],
            "properties": {
                "cors": {
                    "corsRules": []
                }
            }
        },
        {
            "type": "Microsoft.Network/virtualNetworks/subnets",
            "apiVersion": "2024-07-01",
            "name": "[concat(parameters('virtualNetworks_CFT_Virtual_Network_name'), '/private_subnet')]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/virtualNetworks', parameters('virtualNetworks_CFT_Virtual_Network_name'))]",
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_databricksnsgmuuuizl5pkmwk_name'))]"
            ],
            "properties": {
                "addressPrefix": "10.0.1.128/25",
                "networkSecurityGroup": {
                    "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_databricksnsgmuuuizl5pkmwk_name'))]"
                },
                "delegations": [
                    {
                        "name": "databricks-del-gocb4sz3wnjme",
                        "id": "[concat(resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworks_CFT_Virtual_Network_name'), 'private_subnet'), '/delegations/databricks-del-gocb4sz3wnjme')]",
                        "properties": {
                            "serviceName": "Microsoft.Databricks/workspaces"
                        },
                        "type": "Microsoft.Network/virtualNetworks/subnets/delegations"
                    }
                ],
                "privateEndpointNetworkPolicies": "Disabled",
                "privateLinkServiceNetworkPolicies": "Enabled"
            }
        },
        {
            "type": "Microsoft.Network/virtualNetworks/subnets",
            "apiVersion": "2024-07-01",
            "name": "[concat(parameters('virtualNetworks_CFT_Virtual_Network_name'), '/public_subnet')]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/virtualNetworks', parameters('virtualNetworks_CFT_Virtual_Network_name'))]",
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_databricksnsgmuuuizl5pkmwk_name'))]"
            ],
            "properties": {
                "addressPrefix": "10.0.1.0/25",
                "networkSecurityGroup": {
                    "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_databricksnsgmuuuizl5pkmwk_name'))]"
                },
                "delegations": [
                    {
                        "name": "databricks-del-gocb4sz3wnjme",
                        "id": "[concat(resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworks_CFT_Virtual_Network_name'), 'public_subnet'), '/delegations/databricks-del-gocb4sz3wnjme')]",
                        "properties": {
                            "serviceName": "Microsoft.Databricks/workspaces"
                        },
                        "type": "Microsoft.Network/virtualNetworks/subnets/delegations"
                    }
                ],
                "privateEndpointNetworkPolicies": "Disabled",
                "privateLinkServiceNetworkPolicies": "Enabled"
            }
        },
        {
            "type": "Microsoft.Storage/storageAccounts/blobServices/containers",
            "apiVersion": "2025-01-01",
            "name": "[concat(parameters('storageAccounts_cftproject_name'), '/default/product-data')]",
            "dependsOn": [
                "[resourceId('Microsoft.Storage/storageAccounts/blobServices', parameters('storageAccounts_cftproject_name'), 'default')]",
                "[resourceId('Microsoft.Storage/storageAccounts', parameters('storageAccounts_cftproject_name'))]"
            ],
            "properties": {
                "immutableStorageWithVersioning": {
                    "enabled": false
                },
                "defaultEncryptionScope": "$account-encryption-key",
                "denyEncryptionScopeOverride": false,
                "publicAccess": "None"
            }
        },
        {
            "type": "Microsoft.Storage/storageAccounts/blobServices/containers",
            "apiVersion": "2025-01-01",
            "name": "[concat(parameters('storageAccounts_cftproject_name'), '/default/rawdata')]",
            "dependsOn": [
                "[resourceId('Microsoft.Storage/storageAccounts/blobServices', parameters('storageAccounts_cftproject_name'), 'default')]",
                "[resourceId('Microsoft.Storage/storageAccounts', parameters('storageAccounts_cftproject_name'))]"
            ],
            "properties": {
                "immutableStorageWithVersioning": {
                    "enabled": false
                },
                "defaultEncryptionScope": "$account-encryption-key",
                "denyEncryptionScopeOverride": false,
                "publicAccess": "None"
            }
        }
    ]
}
